# ros_382

devel/: .catkin  local_setup.sh
devel/include/mir_actions/: MirMoveBaseAction.h  MirMoveBaseActionFeedback.h  MirMoveBaseActionGoal.h  MirMoveBaseActionResult.h  MirMoveBaseFeedback.h  MirMoveBaseGoal.h  MirMoveBaseResult.h
devel/include/mir_msgs/: BMSData.h  ChargingState.h  EncoderTestEntry.h  Error.h  Event.h  Events.h  ExternalRobot.h  ExternalRobots.h  HookExtendedStatus.h  JoystickVel.h  LocalMapStat.h  PlanSegment.h  PlanSegments.h  PrecisionDockingStatus.h  ResourceState.h  ResourcesState.h  RobotMode.h  RobotState.h  RobotStatus.h  SafetyStatus.h  Serial.h  SoundEvent.h  (+3 more)
src/mir_robot/mir_gazebo/: CMakeLists.txt
src/mir_robot/mir_gazebo/controller/: controller.py
src/mir_robot/mir_gazebo/launch/: mir_empty_world.launch  mir_gazebo_common.launch
src/mir_robot/mir_gazebo/launch/includes/: spawn_maze.launch.xml
src/mir_robot/mir_gazebo/models/w311/: model.config  model.sdf
src/mir_robot/mir_gazebo/models/w311/meshes/: w311-00.dae  w311.dae
src/mir_robot/mir_gazebo/models/w311_desk/: model.config  model.sdf
src/mir_robot/mir_gazebo/models/w311_desk_2/: model.config  model.sdf
src/mir_robot/mir_gazebo/models/w311_desk_2/meshes/: w311_desk_2.dae
src/mir_robot/mir_gazebo/src/: ros control panel.py  tf.txt  tf_listener.py
src/mir_robot/mir_gazebo/worlds/: construction_world_backup.world  w311_world.world
src/myworkcell_core/: CMakeLists.txt  package.xml
src/myworkcell_moveit_config/: .setup_assistant
src/myworkcell_support/: package.xml
(+166 files in other folders)
